--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="./global.css">
-    <script src="./dist/adapters/web/index.js" defer type="module"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/global.css">
+    <script src="/typescript/adapters/web/index.ts" defer type="module"></script>
       
     <link rel="icon" type="image/png" href="x">
     <title>x</title>
   </head>
   <body>
+
+
   </body>
 </html>
